[gd_scene load_steps=7 format=3 uid="uid://bccr4q46k41d3"]

[ext_resource type="Script" path="res://Scenes/Loadout/modifier_equip.gd" id="1_gxuqv"]
[ext_resource type="Theme" uid="uid://dy6705h5bwoor" path="res://Scenes/Loadout/icon_panel_theme.tres" id="1_ppd80"]
[ext_resource type="Texture2D" uid="uid://hgtlb75r0tp1" path="res://Assets/Pickup Sprites/Pickuptileset.png" id="3_lupaq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g7l26"]
atlas = ExtResource("3_lupaq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3x6n"]
atlas = ExtResource("3_lupaq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8sxn"]
atlas = ExtResource("3_lupaq")
region = Rect2(64, 96, 32, 32)

[node name="ModifierEquip" type="MarginContainer"]
custom_minimum_size = Vector2(625, 55)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -35.0
offset_right = 313.0
offset_bottom = 744.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_gxuqv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0.121569, 0.156863, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="GCMain" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="UnequipBtn" type="Button" parent="ScrollContainer/GCMain"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.764706, 0.529412, 0.101961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 125
text = "UNEQUIP"

[node name="Panel" type="Panel" parent="ScrollContainer/GCMain/UnequipBtn"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 16.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ppd80")

[node name="Poison" type="MarginContainer" parent="ScrollContainer/GCMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Border" type="ColorRect" parent="ScrollContainer/GCMain/Poison"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Poison"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Background" type="ColorRect" parent="ScrollContainer/GCMain/Poison/MCMod"]
show_behind_parent = true
layout_mode = 2
color = Color(0.647059, 0.756863, 0.811765, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Poison/MCMod"]
layout_mode = 2

[node name="GCMod" type="GridContainer" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod"]
layout_mode = 2
columns = 2

[node name="MCModIcon" type="MarginContainer" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Border" type="Panel" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/MCModIcon"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_ppd80")

[node name="MCBorder" type="MarginContainer" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/MCModIcon"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="PoisonIcon" type="TextureRect" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/MCModIcon/MCBorder"]
unique_name_in_owner = true
show_behind_parent = true
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_g7l26")
expand_mode = 1
stretch_mode = 5

[node name="PoisonEquiped" type="Label" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/MCModIcon/MCBorder/PoisonIcon"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 178.0
offset_bottom = 49.0
grow_vertical = 0
rotation = -1.0472
theme_override_colors/font_color = Color(0.835294, 0.666667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 45
text = "EQUIPED"

[node name="GC" type="GridContainer" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ModName" type="Label" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.537255, 0.270588, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "POISION MODIFCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PoisonEquipedBtn" type="Button" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 30
text = "EQUIP"

[node name="ModDesc" type="Label" parent="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/GC"]
custom_minimum_size = Vector2(410, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 21
text = "Apply stacking poison on hit
50% resistance to poision elements
50% Increased damage 
taken from fire elements"

[node name="Ice" type="MarginContainer" parent="ScrollContainer/GCMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Border" type="ColorRect" parent="ScrollContainer/GCMain/Ice"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Ice"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Background" type="ColorRect" parent="ScrollContainer/GCMain/Ice/MCMod"]
show_behind_parent = true
layout_mode = 2
color = Color(0.647059, 0.756863, 0.811765, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Ice/MCMod"]
layout_mode = 2

[node name="GCMod" type="GridContainer" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod"]
layout_mode = 2
columns = 2

[node name="MCModIcon" type="MarginContainer" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Border" type="Panel" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/MCModIcon"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_ppd80")

[node name="MCBorder" type="MarginContainer" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/MCModIcon"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="IceIcon" type="TextureRect" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/MCModIcon/MCBorder"]
show_behind_parent = true
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_h3x6n")
expand_mode = 1
stretch_mode = 5

[node name="IceEquiped" type="Label" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/MCModIcon/MCBorder/IceIcon"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 178.0
offset_bottom = 49.0
grow_vertical = 0
rotation = -1.0472
theme_override_colors/font_color = Color(0.835294, 0.666667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 45
text = "EQUIPED"

[node name="GC" type="GridContainer" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ModName" type="Label" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.333333, 0.670588, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "ICE MODIFCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IceEquipedBtn" type="Button" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 30
text = "EQUIP"

[node name="ModDesc" type="Label" parent="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/GC"]
custom_minimum_size = Vector2(410, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 21
text = "Apply a slow on hit
50% resistance to ice elements
50% Increased damage 
taken from poison elements"

[node name="Fire" type="MarginContainer" parent="ScrollContainer/GCMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Border" type="ColorRect" parent="ScrollContainer/GCMain/Fire"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Fire"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Background" type="ColorRect" parent="ScrollContainer/GCMain/Fire/MCMod"]
show_behind_parent = true
layout_mode = 2
color = Color(0.647059, 0.756863, 0.811765, 1)

[node name="MCMod" type="MarginContainer" parent="ScrollContainer/GCMain/Fire/MCMod"]
layout_mode = 2

[node name="GCMod" type="GridContainer" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod"]
layout_mode = 2
columns = 2

[node name="MCModIcon" type="MarginContainer" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Border" type="Panel" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/MCModIcon"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_ppd80")

[node name="MCBorder" type="MarginContainer" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/MCModIcon"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="FireIcon" type="TextureRect" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/MCModIcon/MCBorder"]
show_behind_parent = true
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("AtlasTexture_l8sxn")
expand_mode = 1
stretch_mode = 5

[node name="FireEquiped" type="Label" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/MCModIcon/MCBorder/FireIcon"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -14.0
offset_right = 178.0
offset_bottom = 49.0
grow_vertical = 0
rotation = -1.0472
theme_override_colors/font_color = Color(0.835294, 0.666667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 45
text = "EQUIPED"

[node name="GC" type="GridContainer" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ModName" type="Label" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.792157, 0.196078, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "FIRE MODIFCATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireEquipedBtn" type="Button" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 30
text = "EQUIP"

[node name="ModDesc" type="Label" parent="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/GC"]
custom_minimum_size = Vector2(410, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 21
text = "Apply burn which deals 15% max health 
damage per second
50% resistance to fire elements
50% Increased damage 
taken from ice elements"

[connection signal="pressed" from="ScrollContainer/GCMain/UnequipBtn" to="." method="_on_unequip_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/GCMain/Poison/MCMod/MCMod/GCMod/GC/PoisonEquipedBtn" to="." method="_on_poision_equiped_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/GCMain/Ice/MCMod/MCMod/GCMod/GC/IceEquipedBtn" to="." method="_on_ice_equiped_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/GCMain/Fire/MCMod/MCMod/GCMod/GC/FireEquipedBtn" to="." method="_on_fire_equiped_btn_pressed"]
